--- a/xtrabackup/conf/mysql_recovery_backup.conf
+++ b/xtrabackup/conf/mysql_recovery_backup.conf
@@ -1,24 +1,20 @@
 # mysql 用户名
-user=root
+#user=root
 
 # mysql 密码
-password=123456
+#password=root
 
 # 备份路劲
 backup_dir=/backup
 
 # percona-xtrabackup 备份软件路径
-xtrabackup_dir=
-# percona-xtrabackup要链接的mysql_socket路径
-mysql_socket=/usr/local/mysql/run/mysql.sock
-# 全备是在一周的第几天
-full_backup_week_day=2
+xtrabackup_dir=/usr/local/percona-xtrabackup
 
-# 全量备信息名称 前缀
-full_backup_prefix=full
+# 全备恢复信息名称 前缀
+full_recovery_prefix=full_recovery
 
-# 增量备信息名称 前缀
-increment_prefix=incr
+# 增备恢复信息名称 前缀
+increment_recovery_prefix=incr_recovery
 
 # mysql配置文件
 mysql_conf_file=/etc/my.cnf
@@ -26,9 +22,15 @@ mysql_conf_file=/etc/my.cnf
 # 错误日志文件(更具此文件知道备份是否成功)
 # format:
 # {week_day:1,dir:full/incr_2015-12-29_00-00-00_7,type:full/incr,date:2015-12-30}
-error_log=../var/mysql_increment_hot_backup.err
+error_log=../var/mysql_increment_recovery.err
 
 # 索引文件
 # format:
 # {week_day:1,dir:full/incr_2015-12-29_00-00-00_7,type:full/incr}
 index_file=../var/mysql_increment_hot_backup.index
+
+#恢复临时索引文件
+recovery_tmp_index_file=../var/mysql_recovery_tmp_backup.index
+
+#恢复索引文件
+recovery_index_file=../var/mysql_recovery_backup.index
